packages/kit/test/apps/basics/src/routes/load/invalidation/depends-goto/+layout.js
/** @type {import('./$types').LayoutLoad} */
export function load({ depends }) {
	depends('invalidate-depends-goto:layout');
	return {
		layout: new Date().getTime()
	};
}
